--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -100,6 +100,9 @@
         "__bit_reference": "cpp",
         "__split_buffer": "cpp",
         "__verbose_abort": "cpp",
-        "locale": "cpp"
+        "locale": "cpp",
+        "hash_map": "cpp",
+        "hash_set": "cpp",
+        "__hash_table": "cpp"
     }
 }
